--- a/package.json
+++ b/package.json
@@ -4,7 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev:network": "npx hardhat node",
+    "deploy:local": "npx hardhat run --network localhost scripts/deploy.ts",
+    "deploy:rinkeby": "npx hardhat run --network rinkeby scripts/deploy.ts",
+    "test:unit": "npx hardhat test",
+    "test:coverage": "npx hardhat coverage"
   },
   "repository": {
     "type": "git",
