--- a/package.json
+++ b/package.json
@@ -52,5 +52,8 @@
     "ts-node": "^10.1.0",
     "typechain": "^5.1.2",
     "typescript": "^4.5.2"
+  },
+  "dependencies": {
+    "@nomiclabs/hardhat-web3": "^2.0.0"
   }
 }
